# py-simple

./: .env.example  .gitignore  .markdownlint.json  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/: copilot-instructions.md
docs/: git-commands.md  how-to-use.md  installation.md  template-improvements.md
docs/learning/: 20260828-fix-lint-errors.md
docs/learning/prompts/: 01-code-walkthrough.md  02-refactoring-best-practices.md  03-command-line-parameters.md  04-automation-local.md  05-automation-cloud.md  06-dependencies-side-effects.md  07-linting-formatting-tools.md  08-testing-strategies.md  09-error-handling.md  10-environment-configuration.md  11-package-management.md  12-ci-cd-pipeline.md
py_simple/: __init__.py  config.py  main.py
tests/: test_config.py  test_main.py
